--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "jquery": "^3.5.1",
     "bootstrap": "^3.3.7",
     "core-js": "^3.6.5",
+    "jquery": "^3.5.1",
     "typed.js": "^2.0.11",
     "vue": "^2.6.11",
+    "vue-particles": "^1.0.9",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
